Fixes #16077.  Add default direction/text-align styling to !NumberTextBox and !NumberSpinner.
git-svn-id: http://svn.dojotoolkit.org/src/branches/1.8/dijit@29825 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -2073,6 +2073,16 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
 .dijitSelect .dijitSelectLabel {
 	vertical-align: baseline;
 }
+
+.dijitNumberTextBox {
+	text-align: left;
+	direction: ltr;
+}
+
+.dijitNumberTextBox .dijitInputInner {
+	text-align: inherit; /* input */
+}
+
 .dijitToolbar .dijitSelect {
 	margin: 0;
 }
